fix java runtime user stack info not enough